Disable fullscreen global permission setting in Android.

Fixes a bug where fullscreen *looks* disableable but it's actually
always permitted by default. Forces the global slider to always be
turned on (the user cannot switch it to the off position), and changes
the string from "Allowed" to "Always allowed" to communicate that it
cannot be disabled.

This is a stop-gap measure until we can delete the data (and then this
setting UI will be removed entirely). See bug for details.

Only applies when the simplified-fullscreen-ui flag is enabled (which it
is by default).

BUG=611327

Review-Url: https://codereview.chromium.org/1989303005
Cr-Commit-Position: refs/heads/master@{#395513}

Former-commit-id: 827ed475ee038454ee7dfb2cadba17568fc4a2b5