chrome/android/java/src/org/chromium/chrome/browser/preferences/website/ContentSettingsResources.java
@@ -8,6 +8,7 @@ import android.annotation.SuppressLint;
 
 import org.chromium.base.ThreadUtils;
 import org.chromium.chrome.R;
+import org.chromium.chrome.browser.ChromeFeatureList;
 import org.chromium.chrome.browser.ContentSettingsType;
 
 import java.util.HashMap;
@@ -102,11 +103,17 @@ public class ContentSettingsResources {
                     new ResourceItem(R.drawable.permission_cookie, R.string.cookies_title,
                                  R.string.cookies_title, ContentSetting.ALLOW, ContentSetting.BLOCK,
                                  R.string.website_settings_category_cookie_allowed, 0));
+            // In simplified fullscreen mode, the "on" case should be described as "Always allowed",
+            // rather than just "Allowed". (It is disabled; this further clarifies that it is
+            // deliberately disabled.)
+            int fullscreenEnabledSummary =
+                    ChromeFeatureList.isEnabled("ViewsSimplifiedFullscreenUI")
+                    ? R.string.website_settings_category_always_allowed : 0;
             localMap.put(ContentSettingsType.CONTENT_SETTINGS_TYPE_FULLSCREEN,
                     new ResourceItem(R.drawable.permission_fullscreen,
                                  R.string.website_settings_fullscreen,
                                  R.string.fullscreen_permission_title, ContentSetting.ALLOW,
-                                 ContentSetting.ASK, 0,
+                                 ContentSetting.ASK, fullscreenEnabledSummary,
                                  R.string.website_settings_category_fullscreen_ask));
             localMap.put(ContentSettingsType.CONTENT_SETTINGS_TYPE_GEOLOCATION,
                     new ResourceItem(R.drawable.permission_location,
